# trajopt_moveit

trajopt_edit/: .cproject  .project  CMakeLists.txt
trajopt_edit/ext/: CMakeLists.txt
trajopt_edit/ext/bullet/src/BulletCollision/CollisionDispatch/: btCollisionWorld.cpp
trajopt_edit/python_examples/: testscript.py
trajopt_edit/src/: CMakeLists.txt
trajopt_edit/src/sco/: optimizers.cpp
trajopt_edit/src/trajopt/: CMakeLists.txt  bullet_collision_checker.cpp  bullet_collision_checker_moveit.cpp  collision_checker.cpp  collision_checker.hpp  collision_terms_mb.cpp  collision_terms_mb.hpp  collision_terms_moveit.cpp  collision_terms_moveit.hpp  configuration_space.cpp  configuration_space.hpp  kinematic_terms.cpp  kinematic_terms.hpp  problem_description.cpp  problem_description.hpp  trajectory_costs.cpp  typedefs.hpp  utils.cpp  utils.hpp
trajopt_moveit/: CMakeLists.txt  package.xml  planner_manager_plugins.xml
trajopt_moveit/include/trajopt_moveit/: trajopt_planner.h  trajopt_planner_manager.h
trajopt_moveit/launch/: tl_distance.launch  tl_distance.launch~
trajopt_moveit/src/: tl_distance.cpp  trajopt_planner.cpp  trajopt_planner_manager.cpp
trajopt_moveit/src/trajopt/trajopt/: configuration_space.cpp  configuration_space.hpp  problem_description.cpp  problem_description.hpp
