<?xml version="1.0"?>
<package>
  <name>trajopt_moveit</name>
  <version>0.0.0</version>
  <description>trajopt planning moveit interface</description>

  <maintainer email="ruben.burger@gmail.com">Ruben Burger</maintainer>
  <license>BSD</license>
  <author email="ruben.burger@gmail.com">Ruben Burger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_core</build_depend>  
  <build_depend>pluginlib</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>cmake_modules</run_depend>

  <export>
    <moveit_core plugin="${prefix}/planner_manager_plugins.xml"/>
  </export>
</package>